# src/main/java/fr/estela/piframe/backend/api/v1/controller/ProviderController.java
@@ -14,7 +14,7 @@ import fr.estela.piframe.backend.api.v1.model.Provider.ProviderModelEnum;
 import fr.estela.piframe.backend.api.v1.model.SmugmugProvider;
 import fr.estela.piframe.backend.entity.ProviderEntity;
 import fr.estela.piframe.backend.repository.ProviderRepository;
-import fr.estela.piframe.backend.sourcepack.smugmug.SmugmugProviderEntity;
+import fr.estela.piframe.backend.source.smugmug.SmugmugProviderEntity;
 import io.swagger.inflector.models.RequestContext;
 import io.swagger.inflector.models.ResponseContext;
 
@@ -23,31 +23,54 @@ public class ProviderController extends AbstractController {
 	
 	@Autowired
 	private ProviderRepository providerRepository;
+
+	private Provider toProvider(ProviderEntity providerEntity) {
+
+		Provider provider = null;
+		if (providerEntity instanceof SmugmugProviderEntity) {
+			SmugmugProviderEntity smugmugProviderEntity = (SmugmugProviderEntity) providerEntity;
+			SmugmugProvider smugmugProvider = new SmugmugProvider();
+			smugmugProvider.setProviderModel(ProviderModelEnum.SMUGMUGPROVIDER);
+			smugmugProvider.setAlbum(smugmugProviderEntity.getAlbum());
+			provider = smugmugProvider;
+		}
+		else throw newApiException("Unsupported provider type: " + providerEntity);
+		
+		provider.setId(providerEntity.getId());
+		provider.setName(providerEntity.getName());
+		provider.setConsumerKey(providerEntity.getConsumerKey());
+		provider.setConsumerSecret(providerEntity.getConsumerSecret());
+		provider.setAccessToken(providerEntity.getAccessToken());
+		provider.setAccessTokenSecret(providerEntity.getAccessTokenSecret());
+		return provider;
+	}
+
+	private ProviderEntity toProviderEntity(Provider provider) {
+		
+		ProviderEntity providerEntity = null;
+		if (provider instanceof SmugmugProvider) {
+			SmugmugProvider smugmugProvider = (SmugmugProvider) provider;
+			SmugmugProviderEntity smugmugProviderEntity = new SmugmugProviderEntity();
+			smugmugProviderEntity.setAlbum(smugmugProvider.getAlbum());
+			providerEntity = smugmugProviderEntity;
+		}
+		else throw newApiException("Unsupported provider type: " + provider);
+		
+		providerEntity.setId(provider.getId());
+		providerEntity.setName(provider.getName());
+		providerEntity.setConsumerKey(provider.getConsumerKey());
+		providerEntity.setConsumerSecret(provider.getConsumerSecret());
+		providerEntity.setAccessToken(provider.getAccessToken());
+		providerEntity.setAccessTokenSecret(provider.getAccessTokenSecret());
+		return providerEntity;
+	}
 	
     public ResponseContext providersGET(RequestContext request) {
     	
     	List<ProviderEntity> providerEntities = providerRepository.findAll();
-		
-		List<Provider> providers = new ArrayList<Provider>();
-		
+		List<Provider> providers = new ArrayList<Provider>();		
 		for (ProviderEntity providerEntity : providerEntities) {
-			
-			Provider provider = null;
-			if (providerEntity instanceof SmugmugProviderEntity) {
-				SmugmugProviderEntity smugmugProviderEntity = (SmugmugProviderEntity) providerEntity;
-				SmugmugProvider smugmugProvider = new SmugmugProvider();
-				smugmugProvider.setProviderModel(ProviderModelEnum.SMUGMUGPROVIDER);
-				smugmugProvider.setAlbum(smugmugProviderEntity.getAlbum());
-				provider = smugmugProvider;
-			}
-			else throw newApiException("Unsupported provider type: " + providerEntity);
-			
-			provider.setId(providerEntity.getId());
-			provider.setName(providerEntity.getName());
-			provider.setConsumerKey(providerEntity.getConsumerKey());
-			provider.setConsumerSecret(providerEntity.getConsumerSecret());
-			provider.setAccessToken(providerEntity.getAccessToken());
-			provider.setAccessTokenSecret(providerEntity.getAccessTokenSecret());
+			Provider provider = toProvider(providerEntity);
 			providers.add(provider);
 		}
 		
@@ -59,21 +82,7 @@ public class ProviderController extends AbstractController {
 
 	public ResponseContext providersPOST(RequestContext request, Provider provider) {
 		
-		ProviderEntity providerEntity = null;
-		if (provider instanceof SmugmugProvider) {
-			SmugmugProvider smugmugProvider = (SmugmugProvider) provider;
-			SmugmugProviderEntity smugmugProviderEntity = new SmugmugProviderEntity();
-			smugmugProviderEntity.setAlbum(smugmugProvider.getAlbum());
-			providerEntity = smugmugProviderEntity;
-		}
-		else throw newApiException("Unsupported provider type: " + provider);
-		
-		providerEntity.setName(provider.getName());
-		providerEntity.setConsumerKey(provider.getConsumerKey());
-		providerEntity.setConsumerSecret(provider.getConsumerSecret());
-		providerEntity.setAccessToken(provider.getAccessToken());
-		providerEntity.setAccessTokenSecret(provider.getAccessTokenSecret());
-		
+		ProviderEntity providerEntity = toProviderEntity(provider);		
 		providerEntity = providerRepository.save(providerEntity);
 		provider.setId(providerEntity.getId());
 		
@@ -82,4 +91,26 @@ public class ProviderController extends AbstractController {
 		response.setContentType(MediaType.APPLICATION_JSON_TYPE);
 		return response;
 	}
+
+    public ResponseContext providersProviderIdPUT(RequestContext request, Long providerId, Provider provider) {
+    	
+    	ProviderEntity providerEntity = toProviderEntity(provider);
+    	providerEntity.setId(providerId);
+		providerRepository.save(providerEntity);
+		
+		ResponseContext response = new ResponseContext();
+		response.setEntity(provider);	
+		response.setContentType(MediaType.APPLICATION_JSON_TYPE);
+		return response;
+    }
+	
+    public ResponseContext providersProviderIdDELETE(RequestContext request, Long providerId) {
+    	
+		providerRepository.delete(providerId);
+		
+		ResponseContext response = new ResponseContext();
+		response.setContentType(MediaType.APPLICATION_JSON_TYPE);
+		return response;
+    }
+	
 }
